<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">超级相册</string>
    <string name="photo">照片</string>
    <string name="album">相册</string>
    <string name="favorite">收藏</string>
    <string name="delete">删除</string>
    <string name="share">分享</string>
    <string name="tag">标签</string>
    <string name="like">喜欢</string>
    <string name="ok">确定</string>
    <string name="sel_all">全选</string>
    <string name="no_like_tip">无标记为喜欢的图片</string>
	<string name="camera">拍照</string>
	<string name="init">正在加载..</string>
</resources>