<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        android:background="@color/list_bkg"
        android:orientation="vertical"
        android:padding="0dp"
        tools:context=".ActivityMain" >

        <RelativeLayout
            android:id="@+id/bar_top"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:background="@color/title_bkg" >

            <TextView
                android:id="@+id/top_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="20sp" >
            </TextView>

            <LinearLayout
                android:id="@+id/op_container"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/button_op"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="13dip"
                    android:layout_marginRight="13dip"
                    android:background="@drawable/selector_button_op" >
                </Button>

                <Button
                    android:id="@+id/button_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/selector_button"
                    android:drawableLeft="@drawable/more2_ic"
                    android:paddingLeft="10dip"
                    android:paddingRight="10dip"
                    android:visibility="gone" >
                </Button>
            </LinearLayout>
        </RelativeLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#d2d2d2" >
        </View>

        <LinearLayout
            android:id="@id/bar_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bottom_bar"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp" >

            <Button
                android:id="@+id/button_all"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:drawableTop="@drawable/photo_normal"
                android:text="@string/photo"
                android:textColor="@color/bottom_text"
                android:textSize="15sp" />

            <Button
                android:id="@+id/button_dir"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:drawableTop="@drawable/folder_normal"
                android:text="@string/album"
                android:textColor="@color/bottom_text"
                android:textSize="15sp" />

            <Button
                android:id="@+id/button_like"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:drawableTop="@drawable/favorite_normal"
                android:text="@string/favorite"
                android:textColor="@color/bottom_text"
                android:textSize="15sp" />

            <Button
                android:id="@+id/button_camera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:drawableTop="@drawable/selector_button_camera"
                android:text="@string/camera"
                android:textColor="@color/bottom_text"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/main_progress"
        android:orientation="horizontal"
        android:padding="20dp"
        android:visibility="gone" >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp" />

        <TextView
            android:id="@+id/tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/init"
            android:textColor="@color/gray" >
        </TextView>
    </LinearLayout>

</FrameLayout>